--- a/Projetos/LMS/contas/templates/formNovoCoordenador.html
+++ b/Projetos/LMS/contas/templates/formNovoCoordenador.html
@@ -39,7 +39,7 @@
         <form name="frmcpf" id='formulario' method="post">
           <fieldset>
               <div class="containerInputForm">
-                <label for="login" class="labelForm">Login</label>:
+                <label for="login" class="labelForm">Login</label>:<br>
                 <input type="text" name="Login" id="login" class="obrigatorios"><br>
               </div>
 			  
